                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 08-08-2005 added: ability to specify cache path (currently only used for compressed rar files) in xboxmediacenter.xml.
 - 08-08-2005 fixed: ftp directory listing contained a bug that resulted in an extra white space in the file name (at least with filezilla)
 - 07-08-2005 fixed: Database creation failed
 - 07-08-2005 fixed: finally fixed long filename+vobsubs. never code'n'smoke ;)
 - 07-08-2005 added: option to disable archive handling in media windows. useful for ccx+unrar.
 - 06-08-2005 fixed: Many of the virtual keyboard inputs didn't show a heading.
 - 06-08-2005 fixed: Video OSD could time out while in a submenu.
 - 06-08-2005 changed: Settings spin controls wrap rather than change direction on start/end.
 - 06-08-2005 fixed: after turning off fieldsync in video osd, xbmc would often lockup.
 - 06-08-2005 added: New video OSD settings/bookmarks menus.
 - 05-08-2005 changed: Defaults to sort descending for rating, date, year + size.
 - 05-08-2005 changed: Fading changed to timebased rather than framebased.  Skin format also changed.
 - 05-08-2005 changed: Added Player.ShowInfo - active in fullscreen visualisation when the user presses WHITE for instance.  Removed XBMC's built-in fading of this info.
 - 05-08-2005 added: Control.HasFocus(controlID) and ButtonScroller.HasIcon(icon) conditional visibility items. 
 - 05-08-2005 fixed: Lookup on IMDb and cancel the select movie dialog didn't reset that dialog.
 - 05-08-2005 fixed: IMDb Lookup of numeric movies.
 - 05-08-2005 fixed: httpapi: made it more thread safe