@@ -25,6 +25,7 @@ public:
   const CStdString& GetAlbum() const;
   const CStdString& GetGenre() const;
   int GetTrackNumber() const;
+  int GetDiscNumber() const;
   int GetTrackAndDiskNumber() const;
   int GetDuration() const;  // may be set even if Loaded() returns false
   void GetReleaseDate(SYSTEMTIME& dateTime) const;
